Add missing error codes to documentation, fix wrong success type
